# S2Tui

./: .gitignore  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  MULTIPLATFORM_PLAN.md  README.md  WAYLAND_LIMITATIONS.md  index.html  install-deps.sh  package-lock.json  package.json  permissions.html  settings.html  tailwind.config.js  vite.config.ts  vulkan-warning.html  welcome.html
.github/workflows/: ci.yml  release.yml
scripts/: build-windows.cmd
src/: App.vue  main.ts  permissions.ts  settings.ts  vulkan-warning.ts  welcome.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: app-icon.rc  icon.icns
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  permissions.rs  state.rs
src-tauri/src/audio/: capture.rs  mod.rs  vad.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  types.rs  windows.rs
src-tauri/src/whisper/: compat.rs  gpu.rs  mod.rs  streaming.rs  worker.rs
src/assets/: styles.css
src/components/: CustomModelImportDialog.vue  MicButton.vue  Overlay.vue  PermissionGuide.vue  ShortcutCapture.vue  VuMeter.vue
src/composables/: useModelDownloadTracker.ts  useSettingsSync.ts  useStore.ts  useTauri.ts
src/pages/: PermissionsPage.vue  SettingsPage.vue  VulkanWarningPage.vue  WelcomePage.vue
src/stores/: appStore.ts
src/utils/: flags.ts  languages.ts
