[package]
name = "s2tui"
version = "0.1.0"
description = "Speech-to-Text UI - Local transcription with Whisper"
authors = ["S2Tui"]
edition = "2021"

[lib]
name = "s2tui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Audio capture
cpal = "0.15"

# Random for mock/testing
rand = "0.8"

# Windows: raw-window-handle for overlay configuration + Whisper with Vulkan GPU support
[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
whisper-rs = { version = "0.13", default-features = false, features = ["vulkan"] }

# Linux: Whisper with Vulkan (universal GPU support: NVIDIA, AMD, Intel)
[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.13", default-features = false, features = ["vulkan"] }

# macOS: Whisper with Metal (optimal for Apple Silicon and Intel Macs)
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.13", default-features = false, features = ["metal"] }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSArray"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication", "NSWindow", "NSResponder", "NSView"] }
objc2-av-foundation = { version = "0.3", features = ["AVCaptureDevice", "AVMediaFormat"] }
block2 = "0.6"
core-foundation = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# GPU acceleration features (optional, enable at build time)
# Examples:
#   cargo build --features gpu-cuda           (NVIDIA on Windows/Linux)
#   cargo build --features gpu-hipblas        (AMD on Linux)
#   cargo build --features gpu-vulkan         (Universal GPU)
gpu-cuda = ["whisper-rs/cuda"]        # NVIDIA GPUs (Windows/Linux)
gpu-hipblas = ["whisper-rs/hipblas"]  # AMD GPUs via ROCm (Linux only)
gpu-vulkan = ["whisper-rs/vulkan"]    # Cross-platform GPU via Vulkan

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
