[package]
name = "s2tui"
version = "0.1.0"
description = "Speech-to-Text UI - Local transcription with Whisper"
authors = ["S2Tui"]
edition = "2021"
default-run = "s2tui"  # Default binary for `cargo run` and `tauri dev`

[lib]
name = "s2tui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

# Main Tauri application binary
[[bin]]
name = "s2tui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Audio capture
cpal = "0.15"

# Random for mock/testing
rand = "0.8"

# Windows dependencies
[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
ash = "0.38"  # Vulkan bindings for runtime GPU detection
# whisper-rs is added via features below

# Linux dependencies
[target.'cfg(target_os = "linux")'.dependencies]
ash = "0.38"  # Vulkan bindings for runtime GPU detection
# whisper-rs is added via features below

# Windows/Linux: whisper-rs with configurable GPU support
[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies.whisper-rs]
version = "0.13"
default-features = false
# Features are controlled by Cargo features (gpu-vulkan adds vulkan)

# macOS: Whisper with Metal (optimal for Apple Silicon and Intel Macs)
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.13", default-features = false, features = ["metal"] }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSArray"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication", "NSWindow", "NSResponder", "NSView"] }
objc2-av-foundation = { version = "0.3", features = ["AVCaptureDevice", "AVMediaFormat"] }
block2 = "0.6"
core-foundation = "0.10"

[features]
default = ["custom-protocol", "gpu-vulkan"]  # GPU enabled by default
custom-protocol = ["tauri/custom-protocol"]

# GPU acceleration features for Windows/Linux
# macOS always uses Metal (configured in target dependencies)
# Vulkan is REQUIRED on Windows/Linux - app shows warning if not available
gpu-vulkan = ["whisper-rs/vulkan"]    # Vulkan GPU acceleration (Windows/Linux)

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
