[package]
name = "s2tui"
version = "0.1.7"
description = "Speech-to-Text UI - Local transcription with Whisper"
authors = ["S2Tui"]
edition = "2021"
default-run = "s2tui"  # Default binary for `cargo run` and `tauri dev`

[lib]
name = "s2tui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

# Main Tauri application binary
[[bin]]
name = "s2tui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Streaming HTTP downloader for the Whisper models (no longer bundled —
# fetched from a GitHub Release on first launch). `rustls-tls` avoids
# the OpenSSL system dependency on Linux.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# SHA-256 of downloaded models against a hash hard-coded in MODEL_REGISTRY.
sha2 = "0.10"
# UUID v4 for user-imported model ids. We don't derive ids from the
# file path so renaming/moving the file post-import doesn't break
# references; the id stays stable across the app lifetime.
uuid = { version = "1", features = ["v4", "serde"] }
# Memory pre-flight at custom-model import time: warn the user when
# the model file is too large vs available RAM. Cross-platform; the
# default feature set is fine (we only need `available_memory`).
sysinfo = "0.30"

# Audio capture
cpal = "0.15"

# Random for mock/testing
rand = "0.8"

[dev-dependencies]
# Used by the custom-model validator's unit tests to write fixture
# `.bin` files (with crafted magic + hparams) to a temp dir.
tempfile = "3"

# Windows dependencies
[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
ash = "0.38"  # Vulkan bindings for runtime GPU detection
# whisper-rs is added via features below

# Linux dependencies
[target.'cfg(target_os = "linux")'.dependencies]
ash = "0.38"  # Vulkan bindings for runtime GPU detection
# whisper-rs is added via features below

# Windows/Linux: whisper-rs with configurable GPU support
[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies.whisper-rs]
version = "0.16"
default-features = false
# Features are controlled by Cargo features (gpu-vulkan adds vulkan)

# macOS: Whisper with Metal (optimal for Apple Silicon and Intel Macs)
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", default-features = false, features = ["metal"] }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSArray"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication", "NSWindow", "NSResponder", "NSView"] }
objc2-av-foundation = { version = "0.3", features = ["AVCaptureDevice", "AVMediaFormat"] }
block2 = "0.6"
core-foundation = "0.10"

[features]
default = ["custom-protocol"]  # macOS uses Metal by default (configured in target dependencies)
custom-protocol = ["tauri/custom-protocol"]

# GPU acceleration features for Windows/Linux
# macOS always uses Metal (configured in target dependencies)
# Vulkan should be enabled for Windows/Linux builds
gpu-vulkan = ["whisper-rs/vulkan"]    # Vulkan GPU acceleration (Windows/Linux)

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
